azure/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-svc
spec:
# type: LoadBalancer
  ports:
    - port: 8080
#      nodePort: 32689
      targetPort: 8080
      protocol: TCP
  selector:
    app: hello-app
