azure/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app-ingress
  namespace: demo-app
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-staging
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - demo-app.westus.cloudapp.azure.com
    secretName: tls-secret
  rules:
  - host : demo-app.westus.cloudapp.azure.com
    http:
      paths:
      - path: /
        backend:
          serviceName: app-svc
          servicePort: 8080
#      - path: /secondApi
#        backend:
#          serviceName: app-svc-admin
#          servicePort: 80
